# SL-Channel-Quantization-

./: .gitignore  README_KAGGLE.md  REPRODUCTION_ASSUMPTIONS.md  pyproject.toml  requirements-kaggle.txt  requirements.txt
configs/: config.yaml
configs/dataset/: cifar100.yaml  ham10000.yaml  ham10000_suraj.yaml  mnist.yaml
configs/distribution/: iid.yaml  noniid.yaml
configs/method/: acii_only.yaml  cgc_only.yaml  easyquant.yaml  powerquant.yaml  powerquant_sl.yaml  random_channel.yaml  randtopk_sl.yaml  sl_acc.yaml  splitfc.yaml  std_channel.yaml
configs/profile/: full.yaml  kaggle_matrix_shard.yaml  kaggle_resume.yaml  kaggle_single_full.yaml  kaggle_single_full_suraj.yaml  kaggle_smoke.yaml  robust_5seed.yaml  smoke.yaml
configs/runtime/: default.yaml
experiments/: print_matrix_commands.py  run_ablation.py  run_client_scalability.py  run_main_results.py  train.py
notebooks/: kaggle_runner.ipynb
scripts/: kaggle_bootstrap.sh  run_matrix_shard.sh  run_one.sh  run_smoke.sh  run_tests_quick.sh  zip_outputs.sh
src/compression/: acii.py  cgc.py  methods.py  rounding.py  types.py
src/data/: dataset_loader.py  dirichlet_partition.py  iid_partition.py
src/metrics/: communication.py
src/models/: resnet18_split.py
src/split_learning/: checkpointing.py  step.py  trainer.py
src/utils/: logging_io.py  runtime_info.py  seeding.py
tests/: test_acii.py  test_cgc.py  test_communication.py  test_partitions.py  test_rounding.py  test_split_roundtrip.py
