[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sl-acc-reproduction"
version = "0.1.0"
description = "SL-ACC zero-gap reproduction with Kaggle execution profiles"
requires-python = ">=3.10"
dependencies = [
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  "torch",
  "torchvision",
  "scikit-learn>=1.2",
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "tqdm>=4.66",
  "pytest>=7.0",
]

[tool.setuptools]
packages = ["src", "src.compression", "src.data", "src.metrics", "src.models", "src.split_learning", "src.utils", "experiments"]
